# ulib

./: CMakeLists.txt
include/: addresses.h  handles.h  hooks.h  log.h  modules.h  nt.h  ntquerysysteminformation.hpp  processes.h  shellcodes.h  syscalls.h  threads.h  utils.h  version.h  window.h
include/public/: ul.h  ulib.h
include/virt/: cpu.h  vmx.h
src/: addresses.cpp  handles.cpp  hooks.cpp  log.cpp  modules.cpp  processes.cpp  syscalls.cpp  threads.cpp  utils.cpp  version.cpp  window.cpp
src/virt/: cpu.asm  cpu.cpp  vmx.asm  vmx.cpp
test/: CMakeLists.txt  addresses.cpp  handles.cpp  hooks.cpp  modules.cpp  processes.cpp  shellcodes.cpp  syscalls.cpp  threads.cpp  utils.cpp  version.cpp  window.cpp
test/golden/syscalls/x64/: 18362.txt  19041.txt
test/golden/syscalls/x86/: 10.0.19041.3031.txt  18362.txt  19041.txt
test/test/: files.cpp  process.cpp  raw.cpp  test.h
